docker compose things

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.9'
 services:
-  workshop:
+  session:
     image: viqueen/openjdk-compiler-workshops:1.0.0
     entrypoint: /bin/bash
     stdin_open: true
